# abc

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  external_host
.cargo/: config.toml
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/: simple.rs
src/: error.rs  handlers.rs  listener.rs  main.rs  serenity_ctrlc.rs  ytdl.rs
src/commands/: blacklist.rs  cat.rs  dog.rs  edit_snipe.rs  get_song.rs  join.rs  leave.rs  mod.rs  pause.rs  play.rs  resume.rs  set_loop.rs  snipe.rs  spotify.rs  start.rs  status.rs  stop.rs  test.rs
src/commands/voice/: mod.rs  pause.rs  play.rs  resume.rs  seek.rs  set_loop.rs  status.rs  stop.rs
src/handlers/: client.rs  command.rs  mod.rs  sniper.rs  voice.rs
src/handlers/command/: mod.rs  prefix.rs  slash.rs
src/utils/: arg.rs  context.rs  internal.rs  mod.rs  reply.rs  sniping.rs  status.rs  yt_dlp.rs
src/utils/spotify/: access_token.rs  mod.rs  search.rs
src/utils/ytmusic/: access_token.rs  auth.rs  mod.rs
src/utils/ytmusic/search/: mod.rs
src/utils/ytmusic/search/parsing/: consts.rs  conv.py  ext.rs  helpers.rs  mod.rs
