[package]
name = "abc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
bytes = "1.6.0"
ctrlc = { version = "3.4.4", features = ["termination"] }
reqwest = { version = "0.12.4", features = ["rustls-tls"], default-features = false }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serenity = { version = "0.12.1", features = ["client", "voice", "cache"] }
songbird = "0.4.1"
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
