[package]
name = "abc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.6.0"
ctrlc = { version = "3.4.7", features = ["termination"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serenity = { version = "0.12.4", features = ["client", "voice", "cache"] }
songbird = { version = "0.5.0", features = ["driver", "receive"] }
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
