[package]
name = "abc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
ctrlc = { version = "3.4.7", features = ["termination"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["gzip", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serenity = { version = "0.12.4", features = ["client", "voice", "cache", "collector"] }
songbird = { version = "0.5.0", features = ["driver", "receive"] }
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.17", features = ["io-util"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = "0.1.46"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
